fix overlapping buttons

--- a/sass/src/view/main/Main.scss
+++ b/sass/src/view/main/Main.scss
@@ -1,11 +1,21 @@
 // This file can contain specific scss for the Main.js view component
 
 .cmv_minimized_windows_toolbar {
+    position: absolute;
     background-color: transparent;
     // twice the height of a toolbar + padding
-    bottom: calc(2 * 36px + 6px);
+    bottom: 36px;
+    height: 36px !important;
     // unfortunately, we have to use a hack here to overwrite
     // the 'top' property set by Ext, so that our bottom property
     // actually applies.
+    top: unset !important;
+}
+
+.cmv_minimized_windows_toolbar .x-box-inner {
+    height: 36px;
+}
+
+.cmv_minimized_windows_toolbar .x-toolbar-item {
     top: unset !important;
 }
